MGN-1611#resolved#comment Required field error message overlaps input text field (fields are not required)

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -3449,3 +3449,5 @@ background-position: 0 .5em;
 .totsy #issw #ins-fancybox-tw-proxy .insinset {width:61px;}
 .totsy #issw #ins-fancybox-pn .insinset {width:45px;}
 .totsy #issw #ins-fancybox-em .insinset {width:55px;}
+.discount #advice-required-entry-coupon_code {margin-top:0px;}
+.giftcard #advice-required-entry-giftcard_code {margin-top:0px;}
